# visus

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindCrypto++.cmake
data/: config.json
src/: CMakeLists.txt  config.cc  config.hh  crypto.cc  crypto.hh  image_feature_extractor.cc  image_feature_extractor.hh  image_features.cc  image_features.hh  serializers.hh  visus.cc  visus.hh
